<resources>
    <string name="app_name">Borrowtee</string>
    <string name="title_all_things">All Things</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="borrow">Borrow</string>
    <string name="form_create_name">Name</string>
    <string name="form_create_description">Descrição do item.</string>
    <string name="form_create_borrow_it">Borrow it</string>
    <string name="error_item_already_registered">Item already registered.</string>
    <string name="error_unknown">Something went wrong.</string>
    <string name="fetch_things_success">Items have been updated.</string>
    <string name="fetch_things_failure">Failed to fetch things.</string>
    <string name="delete_thing_failure">Failed to delete thing.</string>
    <string name="delete_thing_success">Thing was successfully removed.</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="delete_confirmation_dialog_title">Deleting confirmation!</string>
    <string name="delete_confirmation_dialog_message">Are you sure you want to delete this entry?</string>
    <string name="take_picture_dialog_title">Take Photo</string>
    <string name="take_picture_dialog_message">Do you want to use the camera or add a photo from the gallery?</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_filter_all_things">All Things</string>
    <string name="menu_item_filter_borrowed">Borrowed</string>
    <string name="menu_item_filter_at_home">At home</string>
</resources>