<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="tf.samir.borrowtee.features.main.view.all_things.AllThingsFragment"
        android:label="@string/title_all_things"
        tools:layout="@layout/fragment_all_things" >
        <action
            android:id="@+id/action_navigation_home_to_createBorrowingActivity"
            app:destination="@id/createBorrowingActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="tf.samir.borrowtee.features.main.view.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="tf.samir.borrowtee.features.main.view.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/createBorrowingActivity"
        android:name="tf.samir.borrowtee.features.borrowing.view.create.CreateBorrowingActivity"
        android:label="activity_create_borrowing"
        tools:layout="@layout/activity_create_borrowing" />
</navigation>