<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="thing"
            type="tf.samir.borrowtee.features.borrowing.presentation.presenter.create.ThingData" />
        <variable
            name="viewModel"
            type="tf.samir.borrowtee.features.borrowing.presentation.presenter.create.CreateBorrowingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.borrowing.view.create.CreateBorrowingActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutName"
            android:enabled="@{viewModel.viewStates.layoutNameEnable}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_create_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:text="@={thing.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDescription"
            android:enabled="@{viewModel.viewStates.layoutDescriptionEnable}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_create_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@={thing.description}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button"
            android:enabled="@{viewModel.viewStates.okButtonEnable}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/form_create_borrow_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            app:setLoading="@{viewModel.viewStates.progressBar}"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:background="@drawable/circle_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>